--- a/sony2in_embed.html
+++ b/sony2in_embed.html
@@ -27,7 +27,7 @@
   <div id="player"></div>
   <script>
   var player = new Clappr.Player({
-          source: 'https://cdn-01.toffeelive.com/origin-09/live-origin/smil:sony_ten1_hd.smil/manifest.mpd',
+          source: 'https://anevia114.mncnow.id/live/eds/RCTI-DD/sa_dash_vmx/RCTI-DD.mpd',
           mimeType: 'application/dash+xml',
           height: '100%',
           width: '100%',
@@ -40,7 +40,7 @@
           shakaConfiguration: {
               drm: {
               clearKeys: {
-                      'ce17264b317db108f19cdc11aa1a9e66': 'a21188aee8fc5c56d016fcffcc6b2295'
+                      '9ba3e153ef8956d6e2b0684fcf74f58f': 'dbc28cb5c6426080f984a5b6d436bb30'
                   }
               },
               preferredAudioLanguage: 'pt-BR',
